--- a/scripts/apps/my_social/project/templates/base.html
+++ b/scripts/apps/my_social/project/templates/base.html
@@ -13,10 +13,13 @@
                     Home
                 </a>
                 <a href="/about">
-                    About
+                    AboutUs
                 </a>
                 <a href="/login">
-                    Login
+                    LogIn
+                </a>
+                <a href="/signup">
+                    SignUp
                 </a>
             </nav>
         </div>
