--- a/scripts/apps/my_social/project/templates/base.html
+++ b/scripts/apps/my_social/project/templates/base.html
@@ -18,6 +18,9 @@
                 <a href="/login">
                     LogIn
                 </a>
+                <a href="/logout">
+                    LogOut
+                </a>
                 <a href="/signup">
                     SignUp
                 </a>
