--- a/scripts/apps/my_social/project/templates/userhome.html
+++ b/scripts/apps/my_social/project/templates/userhome.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1 class="title">
-    AboutUs: Welcome Home
+    AboutUs: Welcome {{ firstname }}!
 </h1>
 <h2>
     Here is some more content.
