--- a/scripts/apps/my_social/project/templates/signup.html
+++ b/scripts/apps/my_social/project/templates/signup.html
@@ -8,6 +8,7 @@
 <div>
     <form method="POST" action="/signup">
         <input type="email" name="email" placeholder="you@email.com">
+        <input type="text" name="username" placeholder="you1234!">
         <input type="text" name="firstname" placeholder="First">
         <input type="text" name="lastname" placeholder="Last">
         <input type="text" name="location" placeholder="Location">
